css issue fix, logo, radio button, label truncate, button mycampaign

--- a/health/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/checklist.scss
+++ b/health/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/checklist.scss
@@ -207,7 +207,7 @@
 }
 
 .custom-class {
-  width: auto;
+  width: auto !important;
 }
 
 .employeeCard {
